fix: metrics ui timeline
